package templateBot.Actions;

import templateBot.Robot;

public class ActionPaint extends Action {
    public ActionPaint(Robot r) {
        super(r);
    }

    @Override
    public int getScore() {
        return 0;
    }

    @Override
    public void play() {

    }
}
