package templateBot.utils;

import templateBot.Robot;

public class MessageUnit {
    Robot robot;
    public MessageUnit(Robot r){
        robot = r;
    }


    void readMessage(){}
}
